# research-crew

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.postgres.yml  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: docker.yml
docs/: CHAOS.md  RESUME_BULLETS.md  TROUBLESHOOTING.md  load-test-results.md  openapi.json  postman_collection.json
docs/adrs/: ADR-001-redis-store.md  ADR-002-idempotency-key.md  ADR-003-retry-policy.md
evals/: INTERPRETATION.md  REPORT.md  __init__.py  golden.py  harness.py
load/: locustfile.py  parse_results.py
load/results/: locust_stats.csv  locust_stats_history.csv
scripts/: deploy.sh  export_openapi.py  run_load_test.sh
src/research_crew/: __init__.py  api.py  chaos.py  cli.py  errors.py  models.py  store.py  streaming.py  synthesizer.py  workflow.py  workflow_inngest.py
src/research_crew/agents/: __init__.py  base.py  real.py
src/research_crew/api/static/: app.js  index.html  styles.css
src/research_crew/client/: __init__.py
src/research_crew/dedup/: __init__.py  null.py  pgvector.py  protocol.py
src/research_crew/observability/: __init__.py  langfuse.py
src/research_crew/store/: __init__.py  migrate.py  postgres.py  redis_streams.py
tests/: REPORT.md  conftest.py  test_agents_base.py  test_api.py  test_api_auth_and_rate_limit.py  test_api_contracts.py  test_api_lifespan.py  test_api_lifespan_full.py  test_api_terminal_shadow.py  test_chaos.py  test_concurrency.py  test_dedup_property.py  test_deploy.py  test_errors.py  test_evals.py  test_frontend.py  test_inngest_workflow.py  test_load_test.py  test_observability_langfuse.py  test_openapi.py  test_postgres_store.py  test_real_adapter_integration.py  test_real_agents.py  test_redis_streams_store.py  test_semantic_dedup.py  test_step_record_schema_migration.py  test_store_contract.py  test_synthesizer.py  test_synthesizer_edges.py  test_websocket_streaming.py  test_workflow.py  test_workflow_edges.py
tests/fixtures/api_responses/: brave_news_response.json  brave_web_response.json  exa_research_paper_response.json  exa_search_response.json  tavily_search_response.json
tests/mock_servers/: __init__.py  app.py
