[project]
name = "research-crew"
version = "0.1.0"
description = "Distributed multi-agent research service: 5 specialist agents fan-out via a Redis-backed durable workflow with idempotent steps + retries."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bishara Mekhaeil" }]
keywords = ["agents", "redis", "distributed", "fastapi", "research", "fan-out", "durable-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Workflow + queue + storage
    "redis>=5.0",
    # HTTP for search adapters
    "httpx>=0.27",
    # CLI + UX
    "typer>=0.12",
    "rich>=13.7",
    # Observability
    "structlog>=24.4",
]

[project.urls]
Homepage = "https://github.com/BishBish123/research-crew"
Repository = "https://github.com/BishBish123/research-crew"

[project.scripts]
research-api = "research_crew.api:main"
research = "research_crew.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_crew"]
