[project]
name = "research-crew"
version = "0.1.0"
description = "Distributed multi-agent research service: 5 specialist agents fan-out via a Redis-backed durable workflow with idempotent steps + retries."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bishara Mekhaeil" }]
keywords = ["agents", "redis", "distributed", "fastapi", "research", "fan-out", "durable-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Workflow + queue + storage
    "redis>=5.0",
    # HTTP for search adapters
    "httpx>=0.27",
    # CLI + UX
    "typer>=0.12",
    "rich>=13.7",
    # Observability
    "structlog>=24.4",
]

[project.urls]
Homepage = "https://github.com/BishBish123/research-crew"
Repository = "https://github.com/BishBish123/research-crew"

[project.scripts]
research-api = "research_crew.api:main"
research = "research_crew.cli:app"

[project.optional-dependencies]
load = [
    "locust>=2.30",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "fakeredis>=2.24",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_crew"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "PL", "RUF", "ASYNC", "S"]
ignore = ["PLR0913", "PLR2004", "E501", "S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "ASYNC"]
"src/research_crew/cli.py" = ["B008"]
"src/research_crew/api.py" = ["B008"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a real Redis at REDIS_URL",
    "slow: tests > ~1s",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]
