[project]
name = "research-crew"
version = "0.1.0"
description = "Concurrent multi-agent research service: 5 specialist agents fan-out via a Redis-backed durable workflow with idempotent steps + retries."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bishara Mekhaeil" }]
keywords = ["agents", "redis", "concurrent", "fastapi", "research", "fan-out", "durable-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    # Workflow + queue + storage
    "redis>=5.0",
    # HTTP for search adapters
    "httpx>=0.27",
    # CLI + UX
    "typer>=0.12",
    "rich>=13.7",
    # Observability
    "structlog>=24.4",
]

[project.urls]
Homepage = "https://github.com/BishBish123/research-crew"
Repository = "https://github.com/BishBish123/research-crew"

[project.scripts]
research-api = "research_crew.api:main"
research = "research_crew.cli:app"

[project.optional-dependencies]
real = [
    # httpx is already in base dependencies; listed here as a reminder that
    # real search adapters and the Langfuse SDK both rely on it.
    "httpx>=0.27",
    # Langfuse tracing adapter. Latest: 4.5.1 (verified 2026-05-06 via PyPI).
    "langfuse>=2.50",
    # Inngest durable workflow engine. Latest: 0.5.18 (verified 2026-05-06 via PyPI).
    # Required for --use-inngest CLI flag and the InngestWorkflow path.
    # Not in base deps — the hand-rolled WorkflowEngine is the default.
    "inngest>=0.4",
]
load = [
    "locust>=2.30",
]
embed = [
    # Real sentence embeddings for PgVectorSemanticDedup (cross-run semantic dedup).
    # Soft-fail: if absent the module falls back to a deterministic hash-based fake encoder.
    # Model used: all-MiniLM-L6-v2 (384 dims); downloaded on first use (~90 MB).
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "fakeredis>=2.24",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_crew"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "PL", "RUF", "ASYNC", "S"]
ignore = ["PLR0913", "PLR2004", "E501", "S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "ASYNC"]
"src/research_crew/cli.py" = ["B008"]
"src/research_crew/api.py" = ["B008"]
# Deferred import inside __init__ is intentional (soft-fail SDK import pattern).
"src/research_crew/observability/langfuse.py" = ["PLC0415"]
# Deferred inngest import is intentional (soft-fail — inngest is an optional [real] dep).
"src/research_crew/workflow_inngest.py" = ["PLC0415"]
# Deferred asyncpg/sentence-transformers imports are intentional (soft-fail optional deps).
"src/research_crew/dedup/pgvector.py" = ["PLC0415"]
# Deferred pgvector import in factory is intentional (only when RESEARCH_PG_DSN is set).
"src/research_crew/dedup/__init__.py" = ["PLC0415"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a real Redis at REDIS_URL",
    "slow: tests that take more than ~1s",
]
filterwarnings = ["error", "ignore::DeprecationWarning"]
